# statshouse-py

./: .gitignore  README.md  pyproject.toml  test_template.txt
.github/workflows/: ci.yml
src/statshouse/: __init__.py  _statshouse.py
tests/: test_manual.py  test_statshouse.py
